# SingnatureDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rocky/singnaturedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  md5.cpp  md5.h  native-lib.cpp
app/src/main/java/com/rocky/signature/: BaseApplication.kt  MainActivity.kt  SignatureUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rocky/singnaturedemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
